# customer-support-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_graph.ipynb
backend/: app.py  config.py  graph.py  prompts.py  reliability.py  state.py
backend/nodes/: billing.py  classifier.py  closing.py  escalation.py  greeting.py  off_topic.py  rag.py  response.py
evals/: README.md  eval_report.md  eval_results.json  golden_dataset.json  run_evals.py
frontend/: agent_dashboard.py  customer_chat.py
knowledge_base/docs/: 01_getting_started.md  02_features_overview.md  03_integrations.md  04_mobile_app.md  05_troubleshooting_login.md  06_troubleshooting_sync.md  07_troubleshooting_notifications.md  08_pricing_plans.md  09_refund_policy.md  10_plan_changes.md  11_payment_billing.md  12_contact_escalation.md  13_account_deletion.md
scripts/: ingest.py
